# zero2prod

./: .editorconfig  Cargo.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
tests/: health_check.rs
