[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Iwazaki <iwazaki@uta-senzen.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"

[dev-dependencies]
tokio = { version = "0.2.2", features = ["full"] }
reqwest = "0.10.10"
