[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Iwazaki <iwazaki@uta-senzen.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.38"
serde = { version = "1.0.123", features = ["derive"] }
sqlx = { version = "0.4.1", features = [
    "postgres",
    "runtime-actix-rustls",
    "macros",
    "uuid",
    "chrono",
    "migrate",
] }
config = "0.10.1"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"

[dev-dependencies]
tokio = { version = "0.2.25", features = ["full"] }
reqwest = "0.10.0"
actix-rt = "1.1.1"
